# trunk

./: CCPConfig.cmake.in  CMakeLists.txt
libs/qCC_db/: ccArrow.cpp  ccArrow.h  ccHObject.cpp  ccObject.h
plugins/qDummyPlugin/: CMakeLists.txt  qDummyPlugin.cpp
plugins/qPCL/: CMakeLists.txt  qPCL.qrc
plugins/qPCL/Filters/: BaseFilter.h  CMakeLists.txt  ExtractSIFT.cpp  LoadPCD.cpp  MLSSmoothingUpsampling.cpp  NormalEstimation.cpp  SavePCD.cpp  StatisticalOutliersRemover.cpp  testfilter.cpp
plugins/qRANSAC_SD/: qRANSAC_SD.cpp
plugins/qRANSAC_SD/RANSAC_SD_orig/: BitmapPrimitiveShape.cpp  BitmapPrimitiveShape.h  Candidate.cpp  Candidate.h  Cone.cpp  Cone.h  ConePrimitiveShape.cpp  ConePrimitiveShape.h  ConePrimitiveShapeConstructor.cpp  ConePrimitiveShapeConstructor.h  Cylinder.cpp  Cylinder.h  CylinderPrimitiveShape.cpp  CylinderPrimitiveShape.h  CylinderPrimitiveShapeConstructor.cpp  CylinderPrimitiveShapeConstructor.h  LevMarFitting.h  LowStretchSphereParametrization.h  PlanePrimitiveShape.cpp  PlanePrimitiveShape.h  PlanePrimitiveShapeConstructor.cpp  PlanePrimitiveShapeConstructor.h  PointCloud.h  PrimitiveShape.h  PrimitiveShapeConstructor.h  RansacShapeDetector.cpp  RansacShapeDetector.h  ScoreComputer.h  ScorePrimitiveShapeVisitor.h  Sphere.cpp  SpherePrimitiveShape.cpp  SpherePrimitiveShape.h  SpherePrimitiveShapeConstructor.cpp  SpherePrimitiveShapeConstructor.h  Torus.cpp  TorusPrimitiveShape.cpp  TorusPrimitiveShape.h  TorusPrimitiveShapeConstructor.cpp  TorusPrimitiveShapeConstructor.h  basic.h
qCC/plugins/qPCL/: CMakeLists.txt
(+15 files in other folders)
